force-app/main/default/objects/Freelancer_Questionnaire__c/Freelancer_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Freelancer Questionnaire</label>
    <nameField>
        <displayFormat>FQ-{00000}</displayFormat>
        <label>Freelancer Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freelancer Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>