force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Agree_to_terms__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Questionnaire Attestation</label>
    <type>Checkbox</type>
</CustomField>