force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Approval_Subject__c.field-meta.xml
<CustomField>
    <fullName>Approval_Subject__c</fullName>
    <formula>&apos;Freelancer Questionnaire to Approve - &apos;+ Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Subject</label>
    <type>Text</type>
</CustomField>