force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Approve_Reject_Link__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reject_Link__c</fullName>
    <formula>HYPERLINK(Base_URL__c &amp; &quot;apex/approveRejectRequest?id=&quot; &amp; Id, &apos;Approve/Reject&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approve/Reject Link</label>
    <type>Text</type>
</CustomField>