force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Assigned_Approver_Group__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Approver_Group__c</fullName>
    <label>Assigned Approver Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>