force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <formula>&quot;https://rsdigitalemea.my.salesforce.com/&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base URL</label>
    <type>Text</type>
</CustomField>