force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <label>Business Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>