force-app/main/default/objects/Freelancer_Questionnaire__c/fields/business_registration_number__c.field-meta.xml
<CustomField>
    <fullName>business_registration_number__c</fullName>
    <label>Business Registration Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>