force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Client_Count__c.field-meta.xml
<CustomField>
    <fullName>Client_Count__c</fullName>
    <label>Clients Last 12 Months</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Questionnaire_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 or 1</fullName>
            </value>
            <value>
                <fullName>2-5</fullName>
            </value>
            <value>
                <fullName>6 or more</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>