force-app/main/default/objects/Freelancer_Questionnaire__c/fields/completed_all_required_registrations__c.field-meta.xml
<CustomField>
    <fullName>completed_all_required_registrations__c</fullName>
    <label>Business Registration Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>