force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Document_Upload__c.field-meta.xml
<CustomField>
    <fullName>Document_Upload__c</fullName>
    <label>Document Upload</label>
    <length>80</length>
    <type>Text</type>
</CustomField>