force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Employeement_Detail__c.field-meta.xml
<CustomField>
    <fullName>Employeement_Detail__c</fullName>
    <label>RD Employment Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>