force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Employees_Contractor_Count__c.field-meta.xml
<CustomField>
    <fullName>Employees_Contractor_Count__c</fullName>
    <label>Business Employees/Contractor Count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 to 3</fullName>
            </value>
            <value>
                <fullName>4 or more</fullName>
            </value>
            <value>
                <fullName>0 or 1</fullName>
                <isActive>false</isActive>
                <label>0 or 1</label>
            </value>
            <value>
                <fullName>2-5</fullName>
                <isActive>false</isActive>
                <label>2-5</label>
            </value>
            <value>
                <fullName>6 or more</fullName>
                <isActive>false</isActive>
                <label>6 or more</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>