force-app/main/default/objects/Freelancer_Questionnaire__c/fields/EOR_Or_IC__c.field-meta.xml
<CustomField>
    <fullName>EOR_Or_IC__c</fullName>
    <formula>Torc_User__r.Latest_Accepted_Match__r.EOR_OR_IC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOR Or IC?</label>
    <type>Text</type>
</CustomField>