force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Form_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Form_Of_Business__c</fullName>
    <label>Form Of Business</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship / Individual Entrepreneur</fullName>
            </value>
            <value>
                <fullName>None, I do not have a business.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>