force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Has_Accept_Match__c.field-meta.xml
<CustomField>
    <fullName>Has_Accept_Match__c</fullName>
    <formula>IF( Latest_Match_Accept_Date__c=NULL,FALSE,Latest_Match_Accept_Date__c+30&gt;TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Accept Match</label>
    <type>Checkbox</type>
</CustomField>