force-app/main/default/objects/Freelancer_Questionnaire__c/fields/How_You_market__c.field-meta.xml
<CustomField>
    <fullName>How_You_market__c</fullName>
    <label>Marketing Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Online Ads, Social Media, Website, PodCast or Blog Posts</fullName>
            </value>
            <value>
                <fullName>Freelancer Platforms such as Torc, Upwork, TopTal, Linkedin or others</fullName>
            </value>
            <value>
                <fullName>Networking events or Tradeshows</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Website, GitHub, etc</fullName>
            </value>
            <value>
                <fullName>I do not market my services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>