force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Initiate_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initiate Approval Process</label>
    <type>Checkbox</type>
</CustomField>