force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Insurance_requirement__c.field-meta.xml
<CustomField>
    <fullName>Insurance_requirement__c</fullName>
    <label>Insurance requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES - I understand the minimum insurance requirements listed above are required during the agreement / assignment period. I am willing to obtain this insurance if I am engaged on a project.</fullName>
            </value>
            <value>
                <fullName>NO -  I do not agree to the insurance requirements.</fullName>
            </value>
            <value>
                <fullName>Unsure, I need to better understand the cost to determine if I am willing to obtain this insurance. (If you select this response you will need to be prepared to obtain insurance and provide a COI to complete phase 2.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>