force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Investements__c.field-meta.xml
<CustomField>
    <fullName>Investements__c</fullName>
    <label>Investments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Insurance</fullName>
            </value>
            <value>
                <fullName>Equipment or Software</fullName>
            </value>
            <value>
                <fullName>Office Space or Co-working Space</fullName>
            </value>
            <value>
                <fullName>Marketing, Accounting or Legal Services</fullName>
            </value>
            <value>
                <fullName>Continuing Education</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>I have not made any business investments</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>