force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Latest_Actual_Approver__c.field-meta.xml
<CustomField>
    <fullName>Latest_Actual_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Freelancer_Questionnaires1</relationshipName>
    <type>Lookup</type>
</CustomField>