force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Latest_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Latest_Approver_Comments__c</fullName>
    <label>Approver Comments</label>
    <type>TextArea</type>
</CustomField>