force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Latest_Match_Accept_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Match_Accept_Date__c</fullName>
    <formula>Torc_User__r.Latest_Accepted_Match__r.Accepted_At__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Match Accept Date</label>
    <type>Date</type>
</CustomField>