force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Latest_Match_Detail__c.field-meta.xml
<CustomField>
    <fullName>Latest_Match_Detail__c</fullName>
    <formula>Torc_User__r.Latest_Accepted_Match__r.Torc_Job_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Match Detail</label>
    <type>Text</type>
</CustomField>