force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Latest_Status_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Status_Update_Date__c</fullName>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>