force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Other_Form_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Other_Form_of_Business__c</fullName>
    <label>Form of Business Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>