force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Other_Investment__c.field-meta.xml
<CustomField>
    <fullName>Other_Investment__c</fullName>
    <label>Investments Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>