force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Other_Market_Your_Service__c.field-meta.xml
<CustomField>
    <fullName>Other_Market_Your_Service__c</fullName>
    <label>Marketing Services Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>