force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Process_Instance_WorkItem__c.field-meta.xml
<CustomField>
    <fullName>Process_Instance_WorkItem__c</fullName>
    <label>Process Instance WorkItem</label>
    <length>18</length>
    <type>Text</type>
</CustomField>