force-app/main/default/objects/Freelancer_Questionnaire__c/fields/State_of_Business__c.field-meta.xml
<CustomField>
    <fullName>State_of_Business__c</fullName>
    <label>Business Registered State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>