force-app/main/default/objects/Freelancer_Questionnaire__c/fields/State_of_residence__c.field-meta.xml
<CustomField>
    <fullName>State_of_residence__c</fullName>
    <label>State of Residence</label>
    <length>80</length>
    <type>Text</type>
</CustomField>