force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Torc_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Freelancer Questionnaires</relationshipLabel>
    <relationshipName>Freelancer_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>