force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Torc_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Torc_User_Id__c</fullName>
    <formula>IF(Torc_User__c = NULL, &apos;&lt;No User Found&gt;&apos;, Torc_User__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Torc User Id</label>
    <type>Text</type>
</CustomField>