force-app/main/default/objects/Freelancer_Questionnaire__c/fields/Worked_As_Employee__c.field-meta.xml
<CustomField>
    <fullName>Worked_As_Employee__c</fullName>
    <label>Past RD Employee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>