force-app/main/default/objects/Freelancer_Questionnaire__c/listViews/Torc_US_Placement_Questionnaire_Freelancer_Questionnaire.listView-meta.xml
<ListView>
    <fullName>Torc_US_Placement_Questionnaire_Freelancer_Questionnaire</fullName>
    <filterScope>Queue</filterScope>
    <label>Torc US Placement Questionnaire</label>
    <queue>Torc_US_Placement_Questionnaire</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>