force-app/main/default/objects/Freelancer_Questionnaire__c/listViews/Torc_US_Questionnaire_Approver_Freelancer_Questionnaire.listView-meta.xml
<ListView>
    <fullName>Torc_US_Questionnaire_Approver_Freelancer_Questionnaire</fullName>
    <filterScope>Queue</filterScope>
    <label>Torc US Questionnaire Approver</label>
    <queue>Torc_US_Questionnaire_Approver</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>